feat: Implement single-campaign self-hosted infrastructure deployment
- CDK: Refactored 'app.py' and stack to deploy a single campaign's infrastructure based on context ('-c campaign=NAME') or current cocli config.
- Architecture: Reverted multi-site loop. Each deployment now creates one isolated environment (VPC, Fargate, S3, CloudFront) for the specific campaign.
- Security: Removed all hardcoded domains. Stack now strictly requires 'hosted-zone-domain' and 'hosted-zone-id' from the campaign's 'config.toml'.
- CLI: Added 'cocli web deploy' to sync web assets to the campaign's specific bucket.
- CLI: Updated commands to read AWS profile and domain directly from campaign config.
- Web: Enhanced 'kml-viewer.html' to dynamic load layers, with no hardcoded fallbacks.

--- a/cocli/web/kml-viewer.html
+++ b/cocli/web/kml-viewer.html
@@ -40,20 +40,15 @@
                 if (response.ok) {
                     layers = await response.json();
                     console.log("Loaded layers from layers.json");
+                } else {
+                    console.warn("layers.json not found or invalid.");
                 }
             } catch (e) {
-                console.warn("Could not load layers.json, using defaults.", e);
+                console.warn("Could not load layers.json:", e);
             }
-
-            // Fallback to defaults if layers.json failed or was empty
+            
             if (!layers || layers.length === 0) {
-                 layers = [
-                    { name: "Target Areas", url: "https://turboheat.net/kml/turboship_targets.kml", default: true },
-                    { name: "Scraped Areas", url: "https://turboheat.net/kml/turboship_aggregated.kml", default: true },
-                    { name: "Legacy Scrapes", url: "https://turboheat.net/kml/turboship_legacy.kml", default: false },
-                    { name: "Prospects", url: "https://turboheat.net/kml/turboship_prospects.kml", default: false },
-                    { name: "Customers", url: "https://turboheat.net/kml/turboship_customers.kml", default: false }
-                ];
+                console.warn("No layers loaded. Map will be empty.");
             }
 
             const urlParams = new URLSearchParams(window.location.search);
